--- a/Belt/featherTestI2C/.vscode/settings.json
+++ b/Belt/featherTestI2C/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.env.osx": {
-        "PATH": "/Users/mikebijl/.platformio/penv/bin:/Users/mikebijl/.platformio/penv:/Users/mikebijl/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/share/dotnet:~/.dotnet/tools:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/Applications/Xamarin Workbooks.app/Contents/SharedSupport/path-bin",
+        "PATH": "/Users/mikebijl/.platformio/penv/bin:/Users/mikebijl/.platformio/penv:/Users/mikebijl/.composer/vendor/bin:/usr/local/mysql/bin:/Users/mikebijl/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/share/dotnet:~/.dotnet/tools:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/Applications/Xamarin Workbooks.app/Contents/SharedSupport/path-bin",
         "PLATFORMIO_CALLER": "vscode"
     }
 }
